--- a/index copy.html
+++ b/index copy.html
@@ -8,6 +8,9 @@
   <!-- Agregar enlace al archivo CSS de Bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css">
   <style>
+    .body{
+      background-color: #fff0 !important;
+    }
     .carousel-control-next,
     .carousel-control-prev {
       background-color: transparent !important;
@@ -46,14 +49,17 @@
     .carousel-item-prev,
     .carousel-item.active {
       display: block;
+      transition: all .3s ease;
     }
 
     .carousel-item {
-      transition: opacity 0.5s ease-in-out;
       opacity: 0;
+      background: white;
     }
 
     .carousel-inner {
+      display: flex;
+      flex-direction: row;
       position: relative;
     }
 
@@ -71,13 +77,21 @@
       z-index: 1;
     }
 
-    .datos-cliente{
+    .datos-cliente {
       font-size: small;
     }
 
-    .arroba{
+    .arroba {
       font-weight: 200;
       font-size: smaller;
+    }
+
+    .card-header{
+      backdrop-filter: blur(10px);
+    }
+
+    .cuerpo{
+      backdrop-filter: blur(10px);
     }
   </style>
 </head>
@@ -106,9 +120,10 @@
               </div>
             </div>
           </div>
-          <div class="row p-3">
+          <div class="row cuerpo p-3">
             <div class="col">
-              <p class="">Buenísimo! Me deja el pelo bárbaro  y dura un montón! Lo recomiendo, lo único que sanó mi pelo un 10,gracias fauna! 🙂</p>
+              <p class="">Buenísimo! Me deja el pelo bárbaro y dura un montón! Lo recomiendo, lo único que sanó mi pelo
+                un 10,gracias fauna! 🙂</p>
             </div>
           </div>
         </div>
@@ -134,7 +149,8 @@
           </div>
           <div class="row p-3">
             <div class="col">
-              <p class="">Lo compro desde hace más de un año y no lo cambio por los shampoo con detergente digo siempre yo, el pelo ya no está rebelde ,no más caspa ,y dura un montón ,muy bueno Gracias chicos de fauna 👍</p>
+              <p class="">Lo compro desde hace más de un año y no lo cambio por los shampoo con detergente digo siempre
+                yo, el pelo ya no está rebelde ,no más caspa ,y dura un montón ,muy bueno Gracias chicos de fauna 👍</p>
             </div>
           </div>
         </div>
@@ -160,7 +176,8 @@
           </div>
           <div class="row p-3">
             <div class="col">
-              <p class="">El shampoo y el acondicionador sólido para pelo neutro/seco te lo deja impresionante! Súper suave y fácil de peinar! Totalmente recomendado</p>
+              <p class="">El shampoo y el acondicionador sólido para pelo neutro/seco te lo deja impresionante! Súper
+                suave y fácil de peinar! Totalmente recomendado</p>
             </div>
           </div>
         </div>
@@ -186,7 +203,9 @@
           </div>
           <div class="row p-3">
             <div class="col">
-              <p class="mt-3">Es la primera vez que compro un sampoo y acondicionador sólido. SUPERÓ MIS ESPECTATIVAS. CALIDAD, PRECIO, AROMA, PRESENTACION, RAPIDEZ Y LA MEJOR ATENCION! Excelente todo.FUE AMOR A PRIMERA LAVADA!!! ajajaja. Compremos zero waste y a emprendedores!!!!</p>
+              <p class="mt-3">Es la primera vez que compro un sampoo y acondicionador sólido. SUPERÓ MIS ESPECTATIVAS.
+                CALIDAD, PRECIO, AROMA, PRESENTACION, RAPIDEZ Y LA MEJOR ATENCION! Excelente todo.FUE AMOR A PRIMERA
+                LAVADA!!! ajajaja. Compremos zero waste y a emprendedores!!!!</p>
             </div>
           </div>
         </div>
@@ -212,7 +231,9 @@
           </div>
           <div class="row p-3">
             <div class="col">
-              <p class="">Empecé a comprar Shampoo sólido desde 2021 y la verdad que desde que lo comencé a usar no quiero otro! Jajaj. Tengo un pelo que se engrasa muy rápido y con el shampoo de Fauna al instante lo vi mucho mejor y mas brilloso. Gracias por tanto❤️</p>
+              <p class="">Empecé a comprar Shampoo sólido desde 2021 y la verdad que desde que lo comencé a usar no
+                quiero otro! Jajaj. Tengo un pelo que se engrasa muy rápido y con el shampoo de Fauna al instante lo vi
+                mucho mejor y mas brilloso. Gracias por tanto❤️</p>
             </div>
           </div>
         </div>
@@ -238,7 +259,9 @@
           </div>
           <div class="row p-3">
             <div class="col">
-              <p class="">Sus productos son lo más! Uso el shampoo fortalecedor y el acondicionador hace más de un año. Me dejan el pelo súper suave, brilloso y los rulos bien definidos! Gracias por cambiarme la peluca 😁💜</p>
+              <p class="">Sus productos son lo más! Uso el shampoo fortalecedor y el acondicionador hace más de un año.
+                Me dejan el pelo súper suave, brilloso y los rulos bien definidos! Gracias por cambiarme la peluca 😁💜
+              </p>
             </div>
           </div>
         </div>
