--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Agregar enlace al archivo CSS de Bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css">
   <style>
-    .body{
+    body{
       background-color: #6A735E !important;
     }
     .carousel-control-next,
