--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   <!-- Agregar enlace al archivo CSS de Bootstrap -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css">
   <style>
-    body{
+    body {
       background-color: #6A735E !important;
     }
+
     .carousel-control-next,
     .carousel-control-prev {
       background-color: transparent !important;
@@ -79,7 +80,8 @@
 
     .datos-cliente {
       font-size: small;
-      width: 80%;
+      width: 60%;
+      margin: 0 0 0 -16px;
     }
 
     .arroba {
@@ -87,30 +89,63 @@
       font-size: smaller;
     }
 
-    .card-header{
+    .card-header {
       align-items: center;
     }
 
-    .cuerpo{
+    .cuerpo {
       backdrop-filter: blur(10px);
     }
 
-    .info-header-col1{
-      width: 20%;
+    .info-header-col1 {
+      width: 15%;
     }
 
-    .info-header-col2{
-      width: 80%;
+    .info-header-col2 {
+      width: 85%;
     }
 
-    .logo-g{
-      width: 20%;
+    .logo-g {
+      width: 40%;
+    }
+
+    @media (max-width: 600px) {
+      h5 {
+        font-size: 16px;
+        font-weight: bold;
+      }
+
+    }
+
+    @media (max-width: 300px) {
+      h5 {
+        font-size: 14px;
+        font-weight: bold;
+      }
+
+      .datos-cliente {
+        font-size: small;
+        width: 78%;
+        margin: 0 0 0 -16px;
+      }
+
+      .logo-g {
+        width: 31%;
+      }
+
+      .info-header-col1 {
+        width: 30%;
+      }
+
+      .info-header-col2 {
+        width: 70%;
+      }
     }
   </style>
 </head>
 
 <body>
-  <div class="container py-1">
+  <div class="container py-1" style="max-width: 600px;">
     <div id="carouselExample" class="carousel slide carousel-fade m-2" data-bs-ride="carousel">
       <div class="carousel-inner  bg-light card md-3">
         <div class="carousel-item active">
